[gd_scene load_steps=9 format=2]

[ext_resource path="res://Controllers/ScoreManager.gd" type="Script" id=1]
[ext_resource path="res://Controllers/AudioStreamPlayer.gd" type="Script" id=2]
[ext_resource path="res://Controllers/SoundManager.gd" type="Script" id=3]
[ext_resource path="res://Sounds/goal.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/bounce2.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/bounce.wav" type="AudioStream" id=6]
[ext_resource path="res://Fonts/SportsballRegular-RxlM.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 7 )

[node name="GameController" type="Node"]
__meta__ = {
"_edit_horizontal_guides_": [ 171.29 ],
"_edit_vertical_guides_": [ 500.186, 250.452, 749.919 ]
}

[node name="SoundManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="HitAudioPlayer" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 5 )
volume_db = -5.0
script = ExtResource( 2 )

[node name="BoundHitAudioPlayer" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 6 )
volume_db = -5.0
script = ExtResource( 2 )

[node name="GoalAudioPlayer" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 4 )
script = ExtResource( 2 )

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="P1Score" type="Label" parent="ScoreManager"]
margin_left = 160.0
margin_top = 135.0
margin_right = 338.0
margin_bottom = 203.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 91.5, 17.5 )
custom_fonts/font = SubResource( 1 )
text = "123"
align = 1

[node name="P2Score" type="Label" parent="ScoreManager"]
margin_left = 651.369
margin_top = 131.22
margin_right = 829.369
margin_bottom = 199.22
grow_horizontal = 2
rect_pivot_offset = Vector2( 91.5, 17.5 )
custom_fonts/font = SubResource( 1 )
text = "123"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
